# tea-sir

./: Cargo.toml  img_to_srgb.py  report.md  wav_to_i16.py
.cargo/: config.toml
benches/: model_matrices.rs
src/: blender.rs  boids.rs  camera.rs  io.rs  lib.rs  main.rs  model.rs  neutron.rs  rng.rs
src/math/: mat.rs  mod.rs  quat.rs  vec.rs
