[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = ["glazer/std"]

[dependencies]
glazer = { path = "../../glazer", default-features = false }
rast = { path = "../../rast" }
libm = "0.2.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", default-features = false }
wee_alloc = "0.4"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 3
