[package]
name = "tea-sir"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["glazer/hot-reload"]

[dependencies]
glazer = { path = "../blaze/crates/glazer", default-features = false, features = [
	"software",
	"audio",
] }
rast = { path = "../blaze/crates/rast" }
libm = "0.2.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", default-features = false }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
