[package]
name = "tea-sir"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["glazer/hot-reload"]

[dependencies]
glazer = { path = "../blaze/crates/glazer", default-features = false, features = [
	"software",
	"audio",
] }
rast = { path = "../blaze/crates/rast" }
libm = "0.2.15"
glam = "0.30.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.100"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "model_matrices"
harness = false
